# realtime-sign-language-translation

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/app/: __init__.py  auth.py  main.py  models.py  ws_hub.py
backend/tests/: test_api.py
configs/: cslr.yaml
core/sign_rt/: __init__.py
core/sign_rt/decode/: __init__.py  kenlm_rescore.py  streaming_ctc.py
core/sign_rt/graph/: __init__.py  ctr_gcn.py  st_gcn.py
core/sign_rt/io/: __init__.py  keypoint_codec.py  onnx_export.py
core/sign_rt/pose/: __init__.py  graph.py  holistic.py
core/sign_rt/seq/: __init__.py  conformer.py  ctc_head.py  recognizer.py
core/sign_rt/slt/: __init__.py  gloss2text.py  transformer_s2t.py
data/: prepare.py
docs/: RESEARCH.md
edge/: run.py
eval/: ablations.py  bleu.py  latency_bench.py  wer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: parity.ts
frontend/src/: App.tsx  main.tsx
frontend/src/core_port/: ctc_collapse.ts  keypoint_codec.ts  normalization.ts
frontend/src/core_port/__fixtures__/: parity.json
frontend/src/inference/: gloss.ts  holistic.ts  recognizer.ts  skeleton.ts
scripts/: export_demo_onnx.py
tests/: test_core.py  test_parity.py  test_smoke.py
train/: train_cslr.py  train_isolated.py  train_slt.py
